creating dragon
