# backend/dragons-service/src/main/java/se/ifmo/models/UserRole.java
@@ -1,0 +1,7 @@
+package se.ifmo.models;
+
+public enum UserRole {
+    ADMIN,
+    USER
+}
+
